Dashboard lọc theo địa bàn của chính mình, và ô tỉnh đổi thành tích nhiều
Yêu cầu: Sales đăng nhập thì Dashboard lọc sẵn theo tỉnh họ phụ trách, màn hình
nói rõ họ cầm những tỉnh nào, và ô tỉnh đổi từ chọn một sang tích nhiều.

Bốn điểm đã chốt với người dùng trước khi code (2026-09-19):
  - Ghép với phạm vi người bằng VÀ, không phải HOẶC
  - Lần đầu mở trang thì tích sẵn địa bàn của mình
  - Ô tỉnh là nút mở bảng tích, không phải hàng chip hay danh sách mở sẵn
  - Trưởng nhóm tính cả tỉnh của cấp dưới

HỆ QUẢ CỐ Ý của việc chọn VÀ, nói rõ để sau này không ai tưởng là lỗi:
Dashboard giờ KHÁC nghĩa với hai màn hình danh sách. ListScope bên đó là "người
phụ trách HOẶC địa bàn"; ở đây là VÀ. Đo trên bản chạy thật: sales3 mở Dashboard
thấy 1 khách, bỏ tích hết thì thấy 2 -- khách thứ hai ở Bắc Ninh, tỉnh do sales4
cầm, nên nó rơi ra khi còn tích địa bàn của sales3. Dòng chú thích và link "Xem
toàn chi nhánh" là đường thoát.

Cách làm:

  - Tám đường DAO của Dashboard đổi tham số tỉnh từ Integer sang List<Integer>,
    dùng SqlFilters.inClause sẵn có. Các màn hình khác vẫn lọc một tỉnh và GIỮ
    NGUYÊN chữ ký cũ -- chúng đi qua SqlFilters.one() mới thêm, nên chỉ có một
    chỗ dựng câu lệnh chứ không đẻ ra hai đường lọc tỉnh có thể lệch nhau.
  - EmployeeDAO.findProvincesCoveredBy: tỉnh mình cầm CỘNG tỉnh của cấp dưới,
    gộp trong MỘT câu (DISTINCT phải do CSDL làm -- người vừa tự cầm Hà Nội vừa
    có lính cầm Hà Nội thì gộp tay ra hai dòng trùng).
  - Tham số URL provinceId lặp nhiều lần, kèm cờ provinceSet. Cờ này là thứ duy
    nhất phân biệt "lần đầu mở trang" với "đã bỏ tích hết": hai ca đó gửi lên
    giống hệt nhau. Thiếu nó thì bỏ tích xong trang tự tích lại và không ai
    thoát được khỏi địa bàn của mình.
  - Chưa được giao tỉnh nào thì KHÔNG siết theo địa bàn, cùng nguyên tắc với
    ListScope: chưa xếp vào thì chưa bị siết. Admin không cầm tỉnh nào nên trang
    của họ không đổi gì.
  - Ô tỉnh KHÔNG tự nạp lại trang mỗi lần tích (ba ô còn lại thì vẫn): tí